# DocuVerse

./: .env.template  .gitignore  README.md  pyproject.toml  run.sh
client/: app.py
server/: config.py  crud.py  lang.py  main.py  models.py  tasks.py  ws.py
