[project]
name = "llm-pdf-chat"
version = "0.1.0"
description = "Chat with your PDFs using LLMs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.0.1",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "faiss-cpu>=1.11.0",
    "langchain-community>=0.4.1",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.54.0",
    "uvicorn[standard]>=0.40.0",
    "python-docx>=1.1.2",
    "sse-starlette>=2.2.1",
    "sseclient-py>=1.8.0",
    "streamlit-markmap>=1.0.1",
    "elevenlabs>=2.0.0",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.2",
    "langchain-huggingface>=0.2.0",
]

[dependency-groups]
dev = [
    "ruff",
]
